--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,19 @@
 /*  your css code here. If applicable */
+div#container {
+    margin: 20px;
+    font-size: 16px;
+}
+
+#container::before {
+    content: "Before Element";
+    color: #f00;
+    font-size: 20px;
+    margin-right: 5px;
+}
+
+#container::after {
+    content: "After Element";
+    color: #f00;
+    font-size: 20px;
+    margin-left: 5px;
+}
